--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "recipe-search-using-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "rakeshvora2007.github.io/recipe-search-using-react",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
