--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "react-spinners": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
